--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.1
+You can now enable/disable hrtf support for the game in the settings menu.
 Added a basic settings menu to the game.
 Added menu music. The volume of the music will be saved the next time you launch the game.
 Added a basic menu system to the game.
