--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.2
+Added the ability to save statistics found in the stats menu to a file. These will persist between sessions.
 Added a steps tracker into the stats menu. It will now tell you how many steps you've taken in total.
 Added a Stats Menu to the game. This menu displays a summary of your total collected keys and toys, killed guards, and destroyed cars. You can access this from the main menu to review your progress all in one place.
 Addressed an issue where collected keys and toys weren't being tracked propperly upon player death.
