--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,8 +1,9 @@
 new in 1.2
+Added the ability to view total playtime in the stats menu. This shows how many minutes and seconds you've played across all sessions, even after restarting the game.
 Added separation of session stats and lifetime stats. In-game stat keys, such as T, I, F, and Q now report only the current session's progress, while the Stats Menu displays lifetime totals of all of the things you've collected, destroyed, and or killed.
 Added the ability to save statistics found in the stats menu to a file. These will persist between sessions.
 Added a steps tracker into the stats menu. It will now tell you how many steps you've taken in total.
-Added a Stats Menu to the game. This menu displays a summary of your total collected keys and toys, killed guards, and destroyed cars. You can access this from the main menu to review your progress all in one place.
+Added a Stats Menu to the game. This menu displays a summary of your total collected keys, collected toys, killed guards, and destroyed cars. You can access this from the main menu to review your progress all in one place.
 Addressed an issue where collected keys and toys weren't being tracked propperly upon player death.
 Added some menu sounds to the game.
 Added the ability to save your settings in the settings menu.
