--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,3 +1,6 @@
+new in 1.3
+Added a confirmation menu when clearing game stats. Players are now asked to confirm their choice before clearing session, lifetime, or all stats, preventing accidental data loss.
+Added a new option in the Settings Menu to clear your game stats. You can now reset your session stats, lifetime stats, or both, with clear feedback after each action.
 new in 1.2
 Improved the readability of the win and death screens by breaking long stat messages into separate, easier to read lines.
 Added the ability to view total playtime in the stats menu. This shows how many minutes and seconds you've played across all sessions, even after restarting the game.
