--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.4
+Added Last Played Timestamp to the Stats Menu. You can now see the exact date and time of your last session in the Lifetime Stats menu. This information is also included when copying your full game stats to the clipboard.
 Added the ability to copy your player title descriptions along with your player titles in the stats menu.
 Added descriptive titles to the Player Titles menu. Each rank now includes a short description, giving players more insight into their progress and what their rank represents.
 Added the ability to copy your player titles along with your session and lifetime stats of the game in the stats menu.
