--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.6
+Made it so the sounds found in the speaker test option are randomized in the main menu.
 Added distinct achievement sounds based on the type of achievement the player recieves. Session based achievements now play session_achievement.ogg, and lifetime achievements now play life_achievement.ogg. This provides clearer audio feedback for each type of achievement the player gets.
 new in 1.5
 Made it so session based achievements have a more Balanced Progression. Session-based achievements now have different starting thresholds and growth rates compared to lifetime achievements. This ensures that they have a shorter focused goal during a single gameplay session while keeping lifetime achievements as long-term milestones.
