--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 1.6
+Fixed a bug where only one achievement tier was granted at a time, even if the player had far surpassed the required milestone. Achievements now unlock multiple tiers at once if progress exceeds several thresholds, ensuring accurate reward tracking.
+Addressed an issue where playtime-based achievements, such as Sprint Runner and Time Traveler, showed inflated progress or negative values. The progress of those achievements are now clamped correctly, and all time thresholds are checked in sequence, preventing logical errors from occuring.
 Added the ability to copy your entire game progress to the clipboard in the game menu. This includes all of your achievements, statistics, and player titles. This provides an easy way to track, share, or back up your full progress in one step.
 Added descriptive intro messages to all major game menus. These include, but are not limmited to, the main Game menu, the Achievements menu, the Statistics menu, and the Settings menu. These short descriptions provide context and guidance, making navigation easier for new and returning players alike.
 Made it so the sounds found in the speaker test option is randomized in the main menu.
