--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,3 +1,5 @@
+new in 1.7
+Changed the growth multiplier for all session-based achievements to a higher value for a more consistent and challenging progression curve. This ensures each tier scales appropriately with player effort, preventing accidental full completions from minimal activity.
 new in 1.6
 Added descriptive labels to audio setting toggles like HRTF and behind pitch decrease, making their purpose clearer to players who don't know what those toggles do.
 Updated the achievement and statistics reset menus with improved descriptions to clarify what each reset option does when the player clicks on them.
