Added options to the settings menu for toggling achievement sounds and spoken notifications when unlocking various achievements during gameplay.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 1.7
+Added options to the settings menu for toggling achievement sounds and spoken notifications when unlocking various achievements during gameplay.
+Added the ability to turn on and off the achievement sounds and speech played when recieving various achievments while playing the game.
 Changed the growth multiplier for all session-based achievements to a higher value for a more consistent and challenging progression curve. This ensures each tier scales appropriately with player effort, preventing accidental full completions from minimal activity.
 new in 1.6
 Added descriptive labels to audio setting toggles like HRTF and behind pitch decrease, making their purpose clearer to players who don't know what those toggles do.
@@ -8,7 +10,7 @@ Fixed an issue where session-based achievements such as Sprint Runner did not re
 Fixed a bug where only one achievement tier was granted at a time, even if the player had far surpassed the required milestone. Achievements now unlock multiple tiers at once if progress exceeds several thresholds, ensuring accurate reward tracking.
 Addressed an issue where playtime-based achievements, such as Sprint Runner and Time Traveler, showed inflated progress or negative values. The progress of those achievements are now clamped correctly, and all time thresholds are checked in sequence, preventing logical errors from occuring.
 Added the ability to copy your entire game progress to the clipboard in the game menu. This includes all of your achievements, statistics, and player titles. This provides an easy way to track, share, or back up your full progress in one step.
-Added descriptive messages to all major game menus. These include, but are not limmited to, the main Game menu, the Achievements menu, the Statistics menu, and the Settings menu. These short descriptions provide context and guidance, making navigation easier for new and returning players alike.
+Added descriptive messages to all major game menus. These include, but are not limited to, the main Game menu, the Achievements menu, the Statistics menu, and the Settings menu. These short descriptions provide context and guidance, making navigation easier for new and returning players alike.
 Made it so the sounds found in the speaker test option is randomized in the main menu.
 Added distinct achievement sounds based on the type of achievement the player recieves. Session based achievements now play session_achievement.ogg, and lifetime achievements now play life_achievement.ogg. This provides clearer audio feedback for each type of achievement the player gets.
 new in 1.5
