--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 1.8
+Added support for randomized variants of sounds found in the learn sounds menu.
+Added a Learn Sounds menu to the main menu. This allows players to preview important sound effects used throughout the game, helping them build familiarity with audio cues while starting out.
 Added an option to show the post-game stat copy prompt in the settings menu. Players can now enable or disable the clipboard prompt that appears after a game session ends. This gives more control over whether session results are automatically offered for copying.
 Added an option to show or hide the manual stat copy menu items in the settings menu. This allows players to show or hide the clipboard copy options for achievements and statistics found in various stat based menus.
 new in 1.7
