--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -16,7 +16,7 @@ Added options to the settings menu for toggling spoken menu loading prompts and 
 Made it so player titles don't get coppied along with other game statistics on the death and win screens. These are only a part of lifetime stats, not session based ones.
 Added the ability to copy all of your game session results to the clipboard upon reaching the death or win screens.
 Added the ability to restart the game in the main menu.
-Modified the description found in the speaker test menu to include a helpful but humorous prompt about propperly varifying your audio setup.
+Modified the description found in the speaker test menu to include a helpful prompt about propperly varifying your audio setup.
 Added a speaker test menu to the main menu. Players can now choose between the Sword Clank and Stone Throw sound to varify their speaker setup. The speaker test menu also includes a description to guide users in selecting an appropriate sound to test their audio setup.
 Added options to the settings menu for toggling achievement sounds and spoken notifications when unlocking various achievements during gameplay.
 Changed the growth multiplier for all session-based achievements to a higher value for a more consistent and challenging progression curve. This ensures each tier scales appropriately with player effort, preventing accidental full completions from minimal activity.
