--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.9
+Added the ability to directly export all of your achievements and game statistics to a file from several in-game menus.
 Added the ability to clear your game progresses in the game menu.
 Added the ability to reset your settings in the settings menu.
 Added a sound for finishing speaker tests.
