--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 1.9
+Made it so the former manual stat copy option found in the settings menu also controls the export items section located in several in-game menus. Players can now choose to show or hide both clipboard and file export items for achievements, statistics, and overall progress from various stat-based menus.
 Added the ability to directly export all of your achievements and game statistics to a file from several in-game menus.
 Added the ability to clear your game progresses in the game menu.
 Added the ability to reset your settings in the settings menu.
